--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>chooseStructureInLife</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="text/javascript" src="public/dist/build/bundle.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>chooseStructureInLife</title>
+  <link href="public/css/main.css" rel="stylesheet">
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="text/javascript" src="public/dist/build/bundle.js"></script>
+</body>
+
 </html>
